// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`screen: Nav/Desktop hook toggles correctly 1`] = `
<div
  className="makeStyles-root"
  onClick={[Function]}
  onTouchEnd={[Function]}
>
  <header
    className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed makeStyles-appBar open mui-fixed css-1m11fdx-MuiPaper-root-MuiAppBar-root"
  >
    <div
      id="actionBar"
      isNetwork={false}
      toggleNetwork={[Function]}
    />
    <div
      id="TitleBar"
      title="hello world"
    />
  </header>
  <div
    className="MuiDrawer-root MuiDrawer-docked makeStyles-drawer open makeStyles-drawerOpen css-7ik032-MuiDrawer-docked"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper open makeStyles-drawerOpen MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft css-1ibis0h-MuiPaper-root-MuiDrawer-paper"
    >
      <svg
        className="makeStyles-logo"
        onClick={[Function]}
        role="button"
      />
      <div
        id="MenuItems"
      />
    </div>
  </div>
</div>
`;

exports[`screen: Nav/Desktop it renders 1`] = `
<div
  className="makeStyles-root"
  onClick={[Function]}
  onTouchEnd={[Function]}
>
  <header
    className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation4 MuiAppBar-root MuiAppBar-colorPrimary MuiAppBar-positionFixed makeStyles-appBar mui-fixed css-1m11fdx-MuiPaper-root-MuiAppBar-root"
  >
    <div
      id="actionBar"
      isNetwork={false}
      toggleNetwork={[Function]}
    />
    <div
      id="TitleBar"
      title="hello world"
    />
  </header>
  <div
    className="MuiDrawer-root MuiDrawer-docked makeStyles-drawer closed makeStyles-drawerClose css-7ik032-MuiDrawer-docked"
  >
    <div
      className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper closed makeStyles-drawerClose MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft css-1ibis0h-MuiPaper-root-MuiDrawer-paper"
    >
      <svg
        className="makeStyles-logo"
        onClick={[Function]}
        role="button"
      />
      <div
        id="MenuItems"
      />
    </div>
  </div>
</div>
`;
